// Copyright 2024 Google LLC. All Rights Reserved.
// 
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
// 
//     http://www.apache.org/licenses/LICENSE-2.0
// 
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";
// All generated protos should be opaque, with "xxx_hidden_" prepended to their field names.


package dcl;

import "proto/connector/sdk.proto";
import "proto/empty.proto";


enum DatafusionAlphaInstanceTypeEnum {
  DatafusionAlphaInstanceTypeEnumNO_VALUE_DO_NOT_USE = 0;
  DatafusionAlphaInstanceTypeEnumTYPE_UNSPECIFIED = 1;
  DatafusionAlphaInstanceTypeEnumBASIC = 2;
  DatafusionAlphaInstanceTypeEnumENTERPRISE = 3;
  DatafusionAlphaInstanceTypeEnumDEVELOPER = 4;
}

enum DatafusionAlphaInstanceStateEnum {
  DatafusionAlphaInstanceStateEnumNO_VALUE_DO_NOT_USE = 0;
  DatafusionAlphaInstanceStateEnumSTATE_UNSPECIFIED = 1;
  DatafusionAlphaInstanceStateEnumENABLED = 2;
  DatafusionAlphaInstanceStateEnumDISABLED = 3;
  DatafusionAlphaInstanceStateEnumUNKNOWN = 4;
}

message DatafusionAlphaInstance {
  string name = 1;
  string description = 2;
  DatafusionAlphaInstanceTypeEnum type = 3;
  bool enable_stackdriver_logging = 4;
  bool enable_stackdriver_monitoring = 5;
  bool private_instance = 6;
  DatafusionAlphaInstanceNetworkConfig network_config = 7;
  map<string, string> labels = 8;
  map<string, string> options = 9;
  string create_time = 10;
  string update_time = 11;
  DatafusionAlphaInstanceStateEnum state = 12;
  string state_message = 13;
  string service_endpoint = 14;
  string zone = 15;
  string version = 16;
  string display_name = 17;
  repeated DatafusionAlphaInstanceAvailableVersion available_version = 18;
  string api_endpoint = 19;
  string gcs_bucket = 20;
  string p4_service_account = 21;
  string tenant_project_id = 22;
  string dataproc_service_account = 23;
  string project = 24;
  string location = 25;
}

message DatafusionAlphaInstanceNetworkConfig {
  string network = 1;
  string ip_allocation = 2;
}

message DatafusionAlphaInstanceAvailableVersion {
  string version_number = 1;
  bool default_version = 2;
  repeated string available_features = 3;
}

message ApplyDatafusionAlphaInstanceRequest {
  DatafusionAlphaInstance resource = 1;
  repeated LifecycleDirective lifecycle_directives = 2;
  string service_account_file = 3;
}

message DeleteDatafusionAlphaInstanceRequest {
  string service_account_file = 1;
  DatafusionAlphaInstance resource = 2;
}

message ListDatafusionAlphaInstanceRequest {
  string service_account_file = 1;
  string Project = 2;
  string Location = 3;
}

message ListDatafusionAlphaInstanceResponse {
  repeated DatafusionAlphaInstance items = 1;
}

service DatafusionAlphaInstanceService {
  rpc ApplyDatafusionAlphaInstance(ApplyDatafusionAlphaInstanceRequest) returns (DatafusionAlphaInstance);
  rpc DeleteDatafusionAlphaInstance(DeleteDatafusionAlphaInstanceRequest) returns (google.protobuf.Empty);
  rpc ListDatafusionAlphaInstance(ListDatafusionAlphaInstanceRequest) returns (ListDatafusionAlphaInstanceResponse);
}
